--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
   padding: 3% 2%;
   text-align: center;
  }
+
+ @media (max-width: 1036px){
+  .title-image{
+  width: 15%;
+        transform: rotate(0.00001deg);
+        position: absolute;
+        right: -2rem;
+        /* top: 66%; */
+        bottom: -33%;
+  }
+ }
+ 
 </style>
 
 
